hphp/test/zend/good/ext-mbstring/zend_multibyte-11.php
<?php
declare(encoding="ISO-8859-15") {
	declare(encoding="ISO-8859-1");
	echo "ok\n";
}
?>