hphp/test/zend/bad/ext/mbstring/tests/zend_multibyte-06.php
<?php
declare(encoding="UTF-8");
var_dump(bin2hex("テスト"));
?>